# py-service-object

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
src/py_service_object/: __init__.py  service_object.py
tests/: test_service_object.py
