[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-service-object"
version = "0.1.1"
description = "A Python implementation of the Service Object pattern, inspired by Ruby's SimpleCommand gem"
readme = "README.md"
authors = [{ name = "Vitor Pereira", email = "pvitorpereira@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["service-object", "design-pattern", "business-logic"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/vitrpereira/py-service-object" 